# exprimidora

./: .gitignore  README.md  pyproject.toml
exprimidora/: __init__.py  base_verb.py  conjugator.py  imperative_conjugation.py  irregular_to_be.py  irregular_to_have.py  personal_conjugation.py  regular_first_group.py  regular_second_group.py  regular_third_group.py  regular_verb.py  syllable_separator.py  verb.py
exprimidora/irregulars/: model_request.py  to_be_existing.py  to_be_standing.py
tests/: test_conjugator.py  test_irregular_model_request.py  test_irregular_to_be.py  test_irregular_to_be_existing.py  test_irregular_to_be_standing.py  test_irregular_to_have.py  test_list_all_forms.py  test_regular_verb_of_first_group.py  test_regular_verb_of_second_group.py  test_regular_verb_of_third_group.py  test_syllable_separator.py
