[tool.poetry]
name = "exprimidora"
version = "0.1.0"
description = "Spanish verbs conjugator"
authors = ["Carlos Capote Pérez-Andreu <carlos.capote@hawara.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
